delete docs refs & update pip install statements in notebooks

--- a/use_cases/notebooks/concrete_compressive_strength.ipynb
+++ b/use_cases/notebooks/concrete_compressive_strength.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
    "source": [
     "!pip install requests\n",
     "!pip install scikit-optimize\n",
-    "!pip install \"../../dist/verifia-0.1.0-py3-none-any.whl[tensorflow,genflow]\""
+    "!pip install verifia[tensorflow,genflow]"
    ]
   },
   {
