--- a/use_cases/notebooks/hotel_cancellation.ipynb
+++ b/use_cases/notebooks/hotel_cancellation.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "!pip install requests\n",
     "!pip install scikit-optimize\n",
-    "!pip install \"../../dist/verifia-0.1.0-py3-none-any.whl[genflow]\""
+    "!pip install verifia[genflow]"
    ]
   },
   {
